--- a/BulkyWebApp/Views/Shared/_Layout.cshtml
+++ b/BulkyWebApp/Views/Shared/_Layout.cshtml
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.11.2/css/jquery.dataTables.min.css" />
-  
-
 </head>
 <body>
     <header>
@@ -35,10 +33,7 @@
           </div>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+       <partial name="_LoginPartial" />
     </div>
   </div>
 </nav>
